CREATE TABLE medical_records (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    patient_id  BIGINT NOT NULL UNIQUE,
    opened_at   TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE clinical_notes (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    medical_record_id BIGINT NOT NULL REFERENCES medical_records(id) ON DELETE CASCADE,
    authored_at     TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    author_username VARCHAR(80) NOT NULL,
    narrative       VARCHAR(4000) NOT NULL
);

CREATE TABLE diagnoses (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    medical_record_id BIGINT NOT NULL REFERENCES medical_records(id) ON DELETE CASCADE,
    code            VARCHAR(40),
    label           VARCHAR(255) NOT NULL,
    recorded_at     TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    author_username VARCHAR(80) NOT NULL
);

CREATE TABLE prescription_lines (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    medical_record_id BIGINT NOT NULL REFERENCES medical_records(id) ON DELETE CASCADE,
    drug_name       VARCHAR(120) NOT NULL,
    dosage          VARCHAR(80) NOT NULL,
    frequency       VARCHAR(80) NOT NULL,
    start_date      DATE NOT NULL,
    end_date        DATE,
    status          VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',
    prescribed_by   VARCHAR(80) NOT NULL,
    created_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE clinical_documents (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    medical_record_id   BIGINT NOT NULL REFERENCES medical_records(id) ON DELETE CASCADE,
    title               VARCHAR(200) NOT NULL,
    content_type        VARCHAR(100) NOT NULL,
    object_storage_key  VARCHAR(500) NOT NULL,
    uploaded_at         TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    uploaded_by         VARCHAR(80) NOT NULL
);

CREATE INDEX idx_clinical_notes_record ON clinical_notes(medical_record_id);
CREATE INDEX idx_prescriptions_record ON prescription_lines(medical_record_id);
CREATE INDEX idx_prescriptions_status ON prescription_lines(status);
