CREATE TABLE nursing_care_records (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    medical_record_id BIGINT NOT NULL,
    care_type         VARCHAR(80) NOT NULL,
    performed_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    nurse_username    VARCHAR(80) NOT NULL,
    description       VARCHAR(2000) NOT NULL
);

CREATE INDEX idx_nursing_care_medical_record ON nursing_care_records(medical_record_id);

CREATE TABLE medication_administrations (
    id                   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    prescription_line_id BIGINT NOT NULL UNIQUE,
    medical_record_id    BIGINT NOT NULL,
    patient_id           BIGINT NOT NULL,
    administered_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    dose_given           VARCHAR(80),
    nurse_username       VARCHAR(80) NOT NULL,
    notes                VARCHAR(500)
);

CREATE INDEX idx_medication_admin_medical_record ON medication_administrations(medical_record_id);
