@startuml CLASSES_PARTICIPANTES_SOINS
title "Classes participantes — Enregistrer les soins effectués"

skinparam classAttributeIconSize 0

class Infirmier <<actor>>

class MedicalRecordDetailPage <<boundary>> {
  - patientId : Long
  - medicalRecord : MedicalRecordResponse
  - nursingForm : NursingCareRequest
  --
  + loadMedicalRecord() : void
  + submitNursingCare() : void
  + submitMedicationAdmin(lineId) : void
}

class PatientClinicalBffController <<boundary>> {
  - clinicalRecordClient : ClinicalRecordClient
  --
  + getMedicalRecord(patientId) : MedicalRecordResponse
  + addNursingCare(patientId, request) : NursingCareResponse
  + administerMedication(patientId, request) : MedicationAdministrationResponse
}

class MedicalRecordController <<boundary>> {
  - clinicalRecordService : ClinicalRecordService
  --
  + getMedicalRecord(patientId, activeOnly) : MedicalRecordResponse
  + addNursingCare(patientId, request) : NursingCareResponse
  + addMedicationAdministration(patientId, request) : MedicationAdministrationResponse
  + addPrescription(patientId, request) : PrescriptionResponse
}

class ClinicalRecordService <<control>> {
  - medicalRecordRepository : MedicalRecordRepository
  - nursingCareRecordRepository : NursingCareRecordRepository
  - medicationAdministrationRepository : MedicationAdministrationRepository
  - prescriptionLineRepository : PrescriptionLineRepository
  --
  + getMedicalRecord(patientId, authHeader, activeOnly) : MedicalRecordResponse
  + addNursingCare(patientId, request, username, authHeader) : NursingCareResponse
  + addMedicationAdministration(...) : MedicationAdministrationResponse
  + addPrescription(...) : PrescriptionResponse
  - findOrCreateRecord(patientId) : MedicalRecord
}

class MedicalRecord <<entity>> {
  - id : Long
  - patientId : Long
  - allergies : String
  - antecedents : String
  - openedAt : Instant
}

class NursingCareRecord <<entity>> {
  - id : Long
  - medicalRecord : MedicalRecord
  - careType : String
  - description : String
  - performedAt : Instant
  - nurseUsername : String
}

class MedicationAdministration <<entity>> {
  - id : Long
  - prescriptionLine : PrescriptionLine
  - administeredAt : Instant
  - doseGiven : String
  - nurseUsername : String
}

class PrescriptionLine <<entity>> {
  - id : Long
  - drugName : String
  - dosage : String
  - frequency : String
  - status : String
}

Infirmier "1" --> "1" MedicalRecordDetailPage : association
MedicalRecordDetailPage "1" --> "1" PatientClinicalBffController : association
PatientClinicalBffController "1" --> "1" MedicalRecordController : association
MedicalRecordController "1" --> "1" ClinicalRecordService : association
ClinicalRecordService "1" --> "1" MedicalRecord : association
ClinicalRecordService "1" --> "0..*" NursingCareRecord : association
ClinicalRecordService "1" --> "0..*" MedicationAdministration : association
ClinicalRecordService "1" --> "0..*" PrescriptionLine : association

legend right
--
  **Relations** : association (--) · dependency (..>)
  Multiplicities on each link
endlegend

@enduml